fixed video overlapping

--- a/app/src/app/pages/animator/animator.page.scss
+++ b/app/src/app/pages/animator/animator.page.scss
@@ -1,3 +1,7 @@
+.container {
+    height: 480px;
+}
+
 .hflex {
     display       : flex;
     flex-direction: row;
