--- a/app/src/app/pages/animator/components/video/video.component.scss
+++ b/app/src/app/pages/animator/components/video/video.component.scss
@@ -1,5 +1,6 @@
 video {
     border-radius: 7px;
+    position: absolute;
 }
 
 .camera-status {
